# embodied_gaussians

./: .gitignore  CameraParams.npz  LICENSE.md  README.md  build_output.txt  example_extrinsics.json  get_pose.py  get_pose2.py  imgui.ini  intrinsics.py  poseEstimation.py  pyproject.toml  troubleshooting.py
camera_pose/: get_pose.py  intrinsics.py  poses.txt
camera_pose/get_intrinsics/: calibrate.py  take_images.py
dependencies/pysegreduce/: CMakeLists.txt  segmented_reduce.cu
examples/: example_embodied_pusht_offline.py  example_pusht.py  example_pusht_datacollector.py  example_pusht_datainspector.py
examples/embodied_environments/pusht_embodied/: pusht_embodied.py
examples/embodied_environments/pusht_embodied/assets/robots/: panda.urdf
examples/embodied_environments/pusht_embodied/assets/robots/meshes/franka/: pusher.stl
examples/embodied_environments/pusht_embodied/environment/: ground.npy  ground_plane.json  sheep_bk2.json
examples/embodied_environments/pusht_embodied/sample_demos/0/: cameras.json
examples/embodied_environments/pusht_embodied/sample_demos/0/videos/: 220422302296.json  234222302164.json  234222303707.json
examples/helpers/: canvas_2d.py
examples/output/pusht_data/0/control_joint_act/c/0/: 0
examples/output/pusht_data/0/state_body_q/: zarr.json
examples/output/pusht_data/0/state_body_q/c/0/0/: 0
examples/output/pusht_data/0/state_body_qd/: zarr.json
examples/output/pusht_data/0/state_body_qd/c/0/0/: 0
examples/output/pusht_data/0/state_joint_q/c/0/: 0
examples/output/pusht_data/0/state_joint_qd/: zarr.json
examples/output/pusht_data/0/state_joint_qd/c/0/: 0
examples/output/pusht_data/0/timestamps/: zarr.json
examples/output/pusht_data/0/timestamps/c/: 0
examples/output/pusht_data/1/: builder.pckl
examples/output/pusht_data/1/control_joint_act/c/0/: 0
examples/output/pusht_data/1/state_body_f/: zarr.json
examples/output/pusht_data/1/state_body_q/: zarr.json
examples/output/pusht_data/1/state_body_q/c/0/0/: 0
examples/output/pusht_data/1/state_body_qd/c/0/0/: 0
examples/output/pusht_data/1/state_joint_q/: zarr.json
examples/output/pusht_data/1/state_joint_q/c/0/: 0
examples/output/pusht_data/1/state_joint_qd/c/0/: 0
examples/output/pusht_data/1/timestamps/: zarr.json
examples/output/pusht_data/1/timestamps/c/: 0
examples/sim_environments/: pusht.py
examples/sim_environments/assets/: pusher.urdf
get_intrinsics/: cameraCalibration.py
objects/: tblock.json
scripts/: build_body_from_pointcloud.py  build_simple_body.py  example_extrinsics.json  example_ground_plane.npy  example_object.json  extrinsics.json  find_ground.py  single_realsense.py  utils.py  visualize_object.py
src/embodied_gaussians/: __init__.py
src/embodied_gaussians/dataset/: dataset_manager.py  dataset_visualizer.py
src/embodied_gaussians/embodied_simulator/: __init__.py  adam.py  appearance_optimizer.py  builder.py  frames.py  gaussians.py  loader.py  offline_camera.py  offline_cameras.py  saver.py  simulator.py  visual_forces.py  warp.py
src/embodied_gaussians/embodied_visualizer/: __init__.py  embodied_viewer.py  visualizer.py
src/embodied_gaussians/environments/: embodied_environment.py  environment.py  virtual_cameras.py
src/embodied_gaussians/physics_simulator/: builder.py  integrator.py  loader.py  saver.py  simulator.py
src/embodied_gaussians/physics_visualizer/: simulation_gui.py  simulation_viewer.py
src/embodied_gaussians/scene_builders/: domain.py  pointcloud_body_builder.py  simple_body_builder.py  simple_visualizer.py  warp_utils.py
src/embodied_gaussians/utils/: physics_utils.py  utils.py
src/embodied_gaussians/vis/: __init__.py
src/ground_finder/: __init__.py  ground_finder.py
src/quick_segmentor/: __init__.py  quick_segmentor.py
src/sam_segmentor/: __init__.py  sam_segementor.py
working_scripts/: d405.py  ground_finder.py  transformation.py
